Bug 363115 - Onion skin is merged into frame when merging layers
Summary: Onion skin is merged into frame when merging layers
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: 3.0 Beta
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-05-16 01:16 UTC by phaineofcatz
Modified: 2016-11-03 08:23 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description phaineofcatz 2016-05-16 01:16:13 UTC
3.0 Beta (git refs/he)
Unknown Windows (unknown architecture)(actually windows 10)

If you have onion skin turned on in an animation layer and you merge another layer into it the current frame gets the onion skin added to it as if drawn. This is permanent, no changing of settings will remove the onion skin information from this frame other than manually erasing it. 

Reproducible: Always

Steps to Reproduce:
1. create layer with animation frames and turn on onion skin for it
2. create new layer, animation not required
3. merge the two layers

Actual Results:  
Results in merged layers with onion skin off, but the onion skin information contained in the current frame.

Expected Results:  
merged layers that contained only the color information that was actually contained in the original layers. 

WORK AROUND : If you turn off the onion skin just before merging layers and then turn it back on again the layers merge as expected and no damage is done.

SUGGESTION : Since the default functionality seems to be to turn off onion skin when the layers have finished merging anyway, I would suggest simply implementing the solution by internally turning off onion skin on layers when they are being merged. This would prevent the loss of data without need for a full investigation at this time.
Comment 1 phaineofcatz 2016-05-16 06:23:44 UTC
Aditionally, Tested on OSX with same results.
Comment 2 Dmitry Kazakov 2016-11-03 08:15:00 UTC
Git commit 3f69cfc7cad2d5194220dadd2c8c3c1a979b28d8 by Dmitry Kazakov.
Committed on 03/11/2016 at 08:14.
Pushed by dkazakov into branch 'rempt/impex-refactoring'.

Don't merge onion skins when merging two layers

That was quite an old bug :)
CC:kimageshop@kde.org

M  +30   -4    libs/image/kis_layer_utils.cpp

http://commits.kde.org/krita/3f69cfc7cad2d5194220dadd2c8c3c1a979b28d8
Comment 3 Dmitry Kazakov 2016-11-03 08:23:27 UTC
Git commit 4711c1f823cc09d4f35abe70146ae5fdf8662002 by Dmitry Kazakov.
Committed on 03/11/2016 at 08:23.
Pushed by dkazakov into branch 'krita/3.1'.

Don't merge onion skins when merging two layers

That was quite an old bug :)
CC:kimageshop@kde.org

M  +30   -4    libs/image/kis_layer_utils.cpp

http://commits.kde.org/krita/4711c1f823cc09d4f35abe70146ae5fdf8662002