Don't merge onion skins when merging two layers

That was quite an old bug :)

BUG:363115
CC:kimageshop@kde.org